@@ -1,3 +1,9 @@
 AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = mono doc docs runtime scripts man 
+
+EXTRA_DIST= mono.pc.in
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA= mono.pc
+DISTCLEANFILES= mono.pc
