@@ -1,9 +1,9 @@
 # the handles dir doesn't apply to windows
 if PLATFORM_WIN32
-SUBDIRS = utils io-layer monoburg metadata cil dis \
-	arch monograph os interpreter jit tests benchmark
+SUBDIRS = utils io-layer monoburg os metadata cil dis \
+	arch monograph interpreter jit tests benchmark
 else
-SUBDIRS = utils io-layer monoburg metadata cil dis \
-	arch monograph os interpreter jit tests benchmark handles
+SUBDIRS = utils io-layer monoburg os metadata cil dis \
+	arch monograph interpreter jit tests benchmark handles
 endif
 
