@@ -1,6 +1,6 @@
 
 INCLUDES = -I$(top_srcdir)
 
-noinst_LIBRARIES = libmonoos.a
+noinst_LTLIBRARIES = libmonoos.la
 
-libmonoos_a_SOURCES = util.c
+libmonoos_la_SOURCES = util.c
